--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,8 +4,8 @@ tasks:
       sudo apt-get update
       sudo apt-get install -y wget python3 python3-pip
       wget -c https://fastdl.mongodb.org/mongocli/mongodb-atlas-cli_1.41.1_linux_$(uname -m).deb -O /var/tmp/mongodb-atlas-cli.deb
-      sudo apt-get install -y /var/tmp/mongodb-atlas-cli.deb && rm /var/tmp/mongodb-atlas-cli.deb
-      pip3 install jupyter
+      sudo apt-get install -y /var/tmp/mongodb-atlas-cli.deb
+      pip3 install jupyter pymongo
     command: |
       atlas deployments setup --type local --force --port 27017
 vscode:
